@@ -1,5 +1,8 @@
 # Changelog
 
+- unreleased
+    * Add `ToMarkup` and `ToValue` instances for `NonEmpty Char`
+
 - 0.8.2.8 (2021-03-04)
     * Bump `base` upper bound to 4.16
     * Bump `tasty` upper bound to 1.5
